...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userwishlistnumber"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="parent"
...
