<resources>
    <string name="app_name">WhatsYourWish</string>
    <string name="action_settings">Settings</string>
    <string name="wishlisttitletab">My wishlist</string>
    <string name="contactslisttitletab">Contacts list</string>
    <string name="add_wish_title">Wish title</string>
    <string name="add_your_wish">Add a wish to your list</string>
    <string name="add_wish_description">Wish description (optional)</string>
    <string name="confirm_button">Confirm</string>
    <string name="toast_wish_exists">Wish already exists in your list!</string>
    <string name="toast_add_wish_success">Wish successfully added</string>
    <string name="toast_add_wish_error">Error in wish title or description</string>
    <string name="dialog_confirm">Confirm your choice</string>
    <string name="dialog_delete_wish">You are about to delete selected wish from you list. Do you really want to proceed?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="remove_wish_ok">Wish removed from your list</string>
    <string name="toast_user_not_found">Selected user seems not to have a wishlist at the moment</string>
    <string name="wishlist_message">Wishlist of the user</string>
    <string name="toast_long_press_to_delete_wish">Long press the wish to delete it</string>
    <string name="searchbar">Search&#8230;</string>
    <string name="toast_no_sim_number">Unable to get the phone number from the device. Please set your own phone number from the device settings</string>
    <string name="toast_no_internet">No internet connection available!</string>
    <string name="my_wishlist_no_internet">No internet connection available. Please connect to the Internet.</string>
    <string name="button_refresh_no_internet">Refresh</string>
    <string name="toast_refresh_rate">Please wait a few seconds before refreshing again</string>
    <string name="userwishlist_description">Description</string>
    <string name="userwishlist_self_assigned">Self-assigned</string>
    <string name="userwishlist_assign_date">Since (dd-mm-yyyy)</string>
    <string name="toast_thiss_my_wishlist">To view your wishlist, please use the dedicated tab</string>
    <string name="toast_self_assign">You\'ve been assigned to the selected wish</string>
    <string name="toast_remove_assignment">You\'re not assigned to the selected with anymore</string>
    <string name="toast_assigned_to_another_one">Selected wish is already assigned to another user</string>
    <string name="toast_long_press_to_self_assign">Long press the wish to assign yourself or remove the assignment if you\'re the assignee</string>
</resources>
